# Computer-Vision

./: main.py  pyproject.toml  requirements.txt
cs231n/: colab_tutorial.ipynb
cs231n/assignment1_colab/assignment1/: knn.ipynb  softmax.ipynb  two_layer_net.ipynb
cs231n/assignment1_colab/assignment1/cs231n/: layers.py
cs231n/assignment1_colab/assignment1/cs231n/classifiers/: fc_net.py  k_nearest_neighbor.py  linear_classifier.py  softmax.py
cs231n/assignment1_colab/assignment1/cs231n/saved/: best_softmax.npy  softmax.npy
scripts/OpenCV/: date_time.py  draw_shapes.py  inv.py  mouse.py  read_img.py  vid_cap.py
