[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "gradio>=5.36.2",
    "imageio>=2.37.0",
    "imgaug>=0.4.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "labelme>=5.8.3",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pycocotools>=2.0.10",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.165",
]
