[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "future>=1.0.0",
    "google>=3.0.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pexpect>=4.9.0",
    "pillow>=11.3.0",
]
